# giga-banana

./: .env_example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
agents/: __init__.py
agents/GigaBanana/.adk/: session.db
agents/image/: agent.py  prompt.py
agents/image/.adk/: session.db
agents/image/plugins/: s3_url_presign.py
agents/image/sub_agents/.adk/: session.db
agents/image/sub_agents/editer/: agent.py  prompt.py
agents/image/sub_agents/editer/tools/: __init__.py  edit_prompt_generator.py  image_editor.py
agents/image/sub_agents/image_generate/: agent.py  prompt.py
agents/image/sub_agents/image_generate/tools/: image_generator.py  prompt_generator.py
agents/image/sub_agents/modifier/: CHECKPOINT_SUMMARY.md  agent.py  tools.py
agents/image/sub_agents/modifier/.adk/: session.db
agents/image/sub_agents/modifier/docs/: CUSTOM_NODE_SUMMARY.md  OPTIMIZATION_NODE_SUMMARY.md  USER_INTERACTION_NODE_SUMMARY.md  WORKFLOW_CREATION_GUIDE.md
agents/image/sub_agents/modifier/docs/checkpoints/: dreamshaper_8.md  v1-5-pruned-ema.md
agents/image/sub_agents/modifier/docs/custom_nodes/: controlnet-nodes.md  detailer-nodes.md  file-path-loaders.md  image-nodes.md  lora-nodes.md  mask-crop-nodes.md  metadata-save-nodes.md  patterns-best-practices.md  pipeline-context-nodes.md  upscale-nodes.md  (+1 more)
src/: config.py  main.py
src/bucket/: manager.py  router.py  schemas.py
src/database/: session.py
src/image/: router.py  schemas.py
src/runner/: runner.py
src/session/: dependencies.py  models.py  router.py  schemas.py  service.py
(+2 files in other folders)
